// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClientSerializer only displays offense information to self or admins 1`] = `
{
  "address": null,
  "age": null,
  "city": null,
  "disability": null,
  "education": [],
  "ethnicity": null,
  "experience": null,
  "firstName": null,
  "gender": null,
  "id": Any<String>,
  "justiceStatus": null,
  "languages": null,
  "lastName": null,
  "license": null,
  "maritalStatus": null,
  "orientation": null,
  "personalStrengths": null,
  "personalSummary": null,
  "phone": null,
  "postalCode": null,
  "referredBy": null,
  "relativeExperience": [],
  "religion": null,
  "state": null,
  "support": null,
  "updatedAt": "<Date>",
  "userId": "01817e24-0d42-7176-b613-889fe94905f0",
  "veteranOrJustice": [
    "justiceImpacted",
  ],
  "veteranStatus": null,
}
`;

exports[`ClientSerializer only displays offense information to self or admins 2`] = `
{
  "address": null,
  "age": null,
  "city": null,
  "disability": null,
  "education": [],
  "ethnicity": null,
  "expectedReleasedAt": null,
  "experience": null,
  "facility": null,
  "firstName": null,
  "gender": null,
  "id": Any<String>,
  "justiceStatus": null,
  "languages": null,
  "lastName": null,
  "license": null,
  "maritalStatus": null,
  "offense": [
    "arson",
  ],
  "orientation": null,
  "personalStrengths": null,
  "personalSummary": null,
  "phone": null,
  "postalCode": null,
  "referredBy": null,
  "relativeExperience": [],
  "releasedAt": "releasedAt01",
  "releasedCounty": null,
  "religion": null,
  "sbn": true,
  "sexualOffenderRegistry": true,
  "state": null,
  "stateOrFederal": "state",
  "support": null,
  "timeServed": "timeServed01",
  "updatedAt": "<Date>",
  "userId": "01817e24-0d42-7176-b613-889fe94905f0",
  "veteranOrJustice": [
    "justiceImpacted",
  ],
  "veteranStatus": null,
}
`;

exports[`ClientSerializer only displays offense information to self or admins 3`] = `
{
  "address": null,
  "age": null,
  "city": null,
  "disability": null,
  "education": [],
  "ethnicity": null,
  "expectedReleasedAt": null,
  "experience": null,
  "facility": null,
  "firstName": null,
  "gender": null,
  "id": Any<String>,
  "justiceStatus": null,
  "languages": null,
  "lastName": null,
  "license": null,
  "maritalStatus": null,
  "offense": [
    "arson",
  ],
  "orientation": null,
  "personalStrengths": null,
  "personalSummary": null,
  "phone": null,
  "postalCode": null,
  "referredBy": null,
  "relativeExperience": [],
  "releasedAt": "releasedAt01",
  "releasedCounty": null,
  "religion": null,
  "sbn": true,
  "sexualOffenderRegistry": true,
  "state": null,
  "stateOrFederal": "state",
  "support": null,
  "timeServed": "timeServed01",
  "updatedAt": "<Date>",
  "userId": "01817e24-0d42-7176-b613-889fe94905f0",
  "veteranOrJustice": [
    "justiceImpacted",
  ],
  "veteranStatus": null,
}
`;
